# kgdb-console-splitting-proxy

./: Cargo.toml  README.md
src/: main.rs  port.rs  rs232.rs
tests/: cli.rs  serial_splitter.rs  tcp_proxy.rs
